--- a/contact/css/style.css
+++ b/contact/css/style.css
@@ -76,6 +76,74 @@ html,body{
   height: 93px;
 }
 
+@media only screen and (max-width:800px) {	
+
+	#header {
+	  width: 100%;
+	  height: 45px;
+	  padding: 0;
+	}
+/*
+	#wrapper{
+		padding: 2%;
+	}	*/
+
+	#contact-header {
+		  width: 100%;
+		}	
+
+	#form {
+	  background-color: #baeafd;
+	  width: 90%;
+	  margin: 5% auto 0;
+	  line-height: 150%;
+	   padding: 5%;
+	}	
+
+	.textq10 {
+	  width: 100%;
+	  margin: auto;
+	  height: 93px;
+	}
+
+}
+
+@media only screen and (max-width:500px) {	
+
+	div#nol_header div.nol_inner p.nol_logo {
+	  margin-left: auto;
+	  margin-right: auto;
+	  width: 28%;
+ 	  float: none !important;
+	}
+
+	div#nol_header div.nol_inner p.nol_logo img {
+	  margin: 10px 24px 0 23px !important;
+	}		
+
+
+
+	div#nol_header div#nol_headerGroup{
+	  margin-left: auto;
+	  margin-right: auto;
+	  
+ 	  float: none !important;
+
+	}
+
+
+	div#nol_header *, div#nol_footer * {
+	  margin: 0;
+	  padding: 0;
+	  font-size: 12px;
+	  line-height: 1;
+	}
+
+
+}
+
+
+
 
 
 
