--- a/contact/css/style.css
+++ b/contact/css/style.css
@@ -10,13 +10,15 @@ html,body{
 
 #contact-header{
 	display:block;
-	margin:20px auto 0;
+	/*margin:20px auto 0;*/
+	margin:1.4%	 auto 0;
+	width: 60.9%;
 }
 
 #form{
 	background-color: #baeafd;
-	width: 686px;
-	margin: 20px auto 0;
+	width: 58.1%;
+	margin: 1.9% auto 0;
 	border-radius: 13px;
 	-moz-border-radius: 13px;
 	-webkit-border-radius: 13px;
@@ -71,10 +73,85 @@ html,body{
 }
 
 .textq10 {
-  width: 90%;
+  width: 99%;
   margin: 0px;
   height: 93px;
 }
+
+
+
+
+@media only screen and (max-width:800px) {	
+
+	#header {
+	  width: 100%;
+	}
+	/*input.ans1
+	{
+		width: 30px;
+		height: 30px;
+	}*/
+
+    .paddingClass{
+
+        margin:20px;
+        padding:5px;
+    }
+
+	#contact-header {
+		  width: 100%;
+		}	
+
+	#form {
+	  background-color: #baeafd;
+	  width: 99%;
+	  margin: 5% auto 0;
+	  line-height: 150%;
+	  padding: 0;
+	}	
+
+	.textq10 {
+	  width: 99%;
+	  margin: auto;
+	  height: 93px;
+	}
+
+}
+
+/*@media only screen and (max-width:500px) {	
+
+	div#nol_header div.nol_inner p.nol_logo {
+	  margin-left: auto;
+	  margin-right: auto;
+	  width: 28%;
+ 	  float: none !important;
+	}
+
+	div#nol_header div.nol_inner p.nol_logo img {
+	  margin: 10px 24px 0 23px !important;
+	}		
+
+
+	div#nol_header div#nol_headerGroup{
+	  margin-left: auto;
+	  margin-right: auto;
+	  
+ 	  float: none !important;
+
+	}
+
+
+	div#nol_header *, div#nol_footer * {
+	  margin: 0;
+	  padding: 0;
+	  font-size: 12px;
+	  line-height: 1;
+	}
+
+
+}*/
+
+
 
 
 
